# boreflow

./: CITATION.cff  README.md  index.html  pixi.toml  search.json
.github/workflows/: lint.yml  quarto-docs.yml  tests.yaml
docs/: _quarto.yml  index.qmd
docs/examples/notebooks/: basic_example.ipynb  introduction.ipynb  wave_overtopping.ipynb
examples/notebooks/: basic_example.html  introduction.html  wave_overtopping.html
reference/: BCArray.html  BCOvertopping.html  BCWOS.html  BCWOSFD.html  BCWOSMillingen.html  BCWOSTholen.html  Example.html  Flux.html  Geometry.html  Limiter.html  Simulation.html  Solver.html  TimeIntegration.html  index.html
site_libs/bootstrap/: bootstrap.min.css
src/: README.md  pyproject.toml
src/boreflow/: __init__.py  enum.py  finite_volume_method.py  geometry.py  geometry_part.py  simulation.py
src/boreflow/boundary_conditions/: bc_array.py  bc_base.py  bc_overtopping.py  bc_wos.py  bc_wos_fd.py  bc_wos_millingen.py  bc_wos_tholen.py
src/python_package_template/: __init__.py  main_example.py
test/: test_example.py  test_simulation.py
